KSENROLL-12184: Fixing issues with button style padding, spacing.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@66368 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/global_styles/base.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/global_styles/base.less
@@ -23,3 +23,9 @@ a{
      padding-top:50px;
 
 }
+
+.global-Base-divider{
+    width:1px;
+    height:auto;
+    display:inline-block;
+}
