--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/button.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/button.less
@@ -18,7 +18,7 @@
     font-size: 13px;
     font-weight: normal;
     .Rounded(@buttonRadius);
-    padding: 5px;
+    padding: 5px 10px;
 }
 
 .kscr-Button--primary{
@@ -29,5 +29,5 @@
     font-size: 13px;
     font-weight: normal;
     .Rounded(@buttonRadius);
-    padding: 5px;
+    padding: 5px 10px;
 }
