--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/card.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/card.less
@@ -43,7 +43,8 @@
 
 .kscr-Card-buttons{
    margin-top:20px;
-   padding: 0.5em;
+   padding: 0.5em 0em;
+   margin-right: -0.5em;
    float: right;
 }
 
